integration canvas